Fix windows launcher script